Brownies-Collection can be built with Java 8/11/17/21